--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -23,14 +23,14 @@ print-undisposed = false
 **.debug = false
 **.coreDebug = false
 
-*.playgroundSizeX = 10000m
-*.playgroundSizeY = 10000m
+*.playgroundSizeX = 1000m
+*.playgroundSizeY = 1000m
 *.playgroundSizeZ = 50m
 
 ##########################################################
 # Annotation parameters                                  #
 ##########################################################
-*.annotations.draw = false
+*.annotations.draw = true # this variable activate building views
 
 ##########################################################
 # Obstacle parameters                                    #
@@ -45,8 +45,8 @@ print-undisposed = false
 *.manager.host = "localhost"
 *.manager.port = 9999
 *.manager.autoShutdown = true
-*.manager.launchConfig = xmldoc("MoST_ped2.launchd.xml")
-#*.manager.roiRects = "4486,1875-4856,2180"
+*.manager.launchConfig = xmldoc("MoST_ped4.launchd.xml")
+#*.manager.roiRects = "0,0-5000,5000" #"4640,2130-4960,3000.5" #*.manager.roiRects = "4486,1875-4856,2180"
 
 *.manager.moduleType = "moped=org.car2x.veins.nodes.Car  motorcycle=org.car2x.veins.nodes.Car slowbicycle=org.car2x.veins.nodes.Car fastbicycle=org.car2x.veins.nodes.Car avgbicycle=org.car2x.veins.nodes.Car *=org.car2x.veins.nodes.Car"
 *.manager.moduleName = "moped=Bikenode motorcycle=Bikenode slowbicycle=Bicyclenode  fastbicycle=Bicyclenode avgbicycle=Bicyclenode *=node"
@@ -103,41 +103,53 @@ print-undisposed = false
 #                    WaveAppLayer                        #
 ##########################################################
 *.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
-*.node[*].appl.headerLength = 80 bit
-*.node[*].appl.sendBeacons = true
-*.node[*].appl.dataOnSch = false
-*.node[*].appl.beaconInterval = 1s
-*.node[*].appl.beaconUserPriority = 5
-*.node[*].appl.dataUserPriority = 7
-*.node[*].appl.beaconLengthBits = 1472 bit
+
+#~ *.node[*].appl.headerLength = 80 bit
+#~ *.node[*].appl.sendBeacons = true
+#~ *.node[*].appl.dataOnSch = false
+#~ *.node[*].appl.beaconInterval = 1s
+#~ *.node[*].appl.beaconUserPriority = 5
+#~ *.node[*].appl.dataUserPriority = 7
+#~ *.node[*].appl.beaconLengthBits = 1472 bit
 
 *.Pednode[*].applType = "ca_system.modules.application.PedAppLayer"
-*.Pednode[*].appl.headerLength = 80 bit
-*.Pednode[*].appl.sendBeacons = true
-*.Pednode[*].appl.dataOnSch = false
-*.Pednode[*].appl.beaconInterval = 1s
-*.Pednode[*].appl.beaconUserPriority = 5
-*.Pednode[*].appl.dataUserPriority = 7
-*.Pednode[*].appl.beaconLengthBits = 1472 bit
+#~ *.Pednode[*].appl.headerLength = 80 bit
+#~ *.Pednode[*].appl.sendBeacons = true
+#~ *.Pednode[*].appl.dataOnSch = false
+#~ *.Pednode[*].appl.beaconInterval = 1s
+#~ *.Pednode[*].appl.beaconUserPriority = 5
+#~ *.Pednode[*].appl.dataUserPriority = 7
+#~ *.Pednode[*].appl.beaconLengthBits = 1472 bit
 
 *.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
-*.Bicyclenode[*].appl.headerLength = 80 bit
-*.Bicyclenode[*].appl.sendBeacons = true
-*.Bicyclenode[*].appl.dataOnSch = false
-*.Bicyclenode[*].appl.beaconInterval = 1s
-*.Bicyclenode[*].appl.beaconUserPriority = 5
-*.Bicyclenode[*].appl.dataUserPriority = 7
-*.Bicyclenode[*].appl.beaconLengthBits = 1472 bit
+
+#~ *.Bicyclenode[*].appl.headerLength = 80 bit
+#~ *.Bicyclenode[*].appl.sendBeacons = true
+#~ *.Bicyclenode[*].appl.dataOnSch = false
+#~ *.Bicyclenode[*].appl.beaconInterval = 1s
+#~ *.Bicyclenode[*].appl.beaconUserPriority = 5
+#~ *.Bicyclenode[*].appl.dataUserPriority = 7
+#~ *.Bicyclenode[*].appl.beaconLengthBits = 1472 bit
 
 *.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
-*.Bikenode[*].appl.headerLength = 80 bit
-*.Bikenode[*].appl.sendBeacons = true
-*.Bikenode[*].appl.dataOnSch = false
-*.Bikenode[*].appl.beaconInterval = 1s
-*.Bikenode[*].appl.beaconUserPriority = 5
-*.Bikenode[*].appl.dataUserPriority = 7
-*.Bikenode[*].appl.beaconLengthBits = 1472 bit #200bytes
 
+#~ *.Bikenode[*].appl.headerLength = 80 bit
+#~ *.Bikenode[*].appl.sendBeacons = true
+#~ *.Bikenode[*].appl.dataOnSch = false
+#~ *.Bikenode[*].appl.beaconInterval = 1s
+#~ *.Bikenode[*].appl.beaconUserPriority = 5
+#~ *.Bikenode[*].appl.dataUserPriority = 7
+#~ *.Bikenode[*].appl.beaconLengthBits = 1472 bit 
+
+*.**.appl.headerLength = 80 bit
+*.**.appl.sendBeacons = false
+*.**.appl.dataOnSch = false
+*.**.appl.beaconInterval = 1s
+*.**.appl.beaconUserPriority = 5
+*.**.appl.dataUserPriority = 7
+*.**.appl.beaconLengthBits = 1472 bit #200bytes
+
+*.**.appl.CBRInterval = 0.25s
 
 ##########################################################
 #                      Mobility                          #
@@ -151,25 +163,31 @@ print-undisposed = false
 *.node[*].veinsmobility.accidentDuration = 20s
 *.node[*].appl.Accident_start = 100000
 
-*.Pednode[*].veinsmobilityType.debug = false
-*.Pednode[*].veinsmobility.x = 0
-*.Pednode[*].veinsmobility.y = 0
-*.Pednode[*].veinsmobility.z = 1.895
+*.**.veinsmobilityType.debug = false
+*.**.veinsmobility.x = 0
+*.**.veinsmobility.y = 0
+*.**.veinsmobility.z = 1.895
 
-*.Bicyclenode[*].veinsmobilityType.debug = false
-*.Bicyclenode[*].veinsmobility.x = 0
-*.Bicyclenode[*].veinsmobility.y = 0
-*.Bicyclenode[*].veinsmobility.z = 1.895
+#~ *.Pednode[*].veinsmobilityType.debug = false
+#~ *.Pednode[*].veinsmobility.x = 0
+#~ *.Pednode[*].veinsmobility.y = 0
+#~ *.Pednode[*].veinsmobility.z = 1.895
 
-*.Bikenode[*].veinsmobilityType.debug = false
-*.Bikenode[*].veinsmobility.x = 0
-*.Bikenode[*].veinsmobility.y = 0
-*.Bikenode[*].veinsmobility.z = 1.895
+#~ *.Bicyclenode[*].veinsmobilityType.debug = false
+#~ *.Bicyclenode[*].veinsmobility.x = 0
+#~ *.Bicyclenode[*].veinsmobility.y = 0
+#~ *.Bicyclenode[*].veinsmobility.z = 1.895
 
+#~ *.Bikenode[*].veinsmobilityType.debug = false
+#~ *.Bikenode[*].veinsmobility.x = 0
+#~ *.Bikenode[*].veinsmobility.y = 0
+#~ *.Bikenode[*].veinsmobility.z = 1.895
+
+
+[Config Ped_Crossing-BL-Obstacle-S11]
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
-[Config Ped_Crossing-BL-Obstacle-S10]
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -179,27 +197,44 @@ cmdenv-express-mode = true
 *.**.nic.mac1609_4.useServiceChannel = false
 
 # Set Scenario 
+*.manager.launchConfig = xmldoc("MoST_ped3.launchd.xml")
 
-*.manager.firstStepAt = 30000s #${DEN = 19000s, 22000s, 29000s, 30000s}  #18000s #${DEN=20595s,22326s,22109s,23912s} #33500s,38500s} # 18500s,43500s} 
-*.manager.roiRects = "4735,2215-4935,2415"
+*.manager.firstStepAt = 290s #130s 
+sim-time-limit = 310s #150s 
+#*.**.appl.beaconAtTime = 320s
+#*.manager.roiRects = "4640,2130-4960,2320" #"4735,2215-4935,2415"
+
+*.**.appl.Slotted1Enabled = true
+*.**.appl.Slotted_Ns = 3 #${3 ,2} 
+*.**.appl.Slotted_R = 300 #40
+*.**.appl.Slotted_tau = 0.005 #1.45
+
+*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.NTL_target = 0 
+*.**.appl.aware = false
+
+*.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.**.appl.Send_Per_WSM = false
+*.**.appl.sendWSA = false 
 
 #########################
 #### Normal Vehicle #####
 #########################
 
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
+#~ *.node[*].appl.Slotted1Enabled = true
+#~ *.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
+#~ *.node[*].appl.Slotted_R = 300 #40
+#~ *.node[*].appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
-*.node[*].appl.NTL_target =0 # ${NTL=0}#,1,2}
-*.node[*].appl.aware = false
+#~ *.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+#~ *.node[*].appl.NTL_target = 0 
+#~ *.node[*].appl.aware = false
 
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+#~ *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false 
+#~ *.node[*].appl.Send_Per_WSM = false
+#~ *.node[*].appl.sendWSA = false 
 
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
@@ -211,69 +246,64 @@ cmdenv-express-mode = true
 #### Pedestrian Nodes #####
 ###########################
 
-*.Pednode[*].appl.Slotted1Enabled = true
-*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Pednode[*].appl.Slotted_R = 300 #40
-*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
+#~ *.Pednode[*].appl.Slotted1Enabled = true
+#~ *.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+#~ *.Pednode[*].appl.Slotted_R = 300 #40
+#~ *.Pednode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
+#~ *.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 
-*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Pednode[*].appl.aware = false 
+#~ *.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+#~ *.Pednode[*].appl.aware = false 
 
-*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+#~ *.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = false 
+#~ *.Pednode[*].appl.Send_Per_WSM = false
+#~ *.Pednode[*].appl.sendWSA = false 
 
 ########################
 #### Bicycle Nodes #####
 ########################
 
-*.Bicyclenode[*].appl.Slotted1Enabled = true
-*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bicyclenode[*].appl.Slotted_R = 300 #40
-*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
+#~ *.Bicyclenode[*].appl.Slotted1Enabled = true
+#~ *.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+#~ *.Bicyclenode[*].appl.Slotted_R = 300 #40
+#~ *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bicyclenode[*].appl.aware = false 
+#~ *.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
+#~ *.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+#~ *.Bicyclenode[*].appl.aware = false 
 
-*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+#~ *.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false 
+#~ *.Bicyclenode[*].appl.Send_Per_WSM = false
+#~ *.Bicyclenode[*].appl.sendWSA = false 
 
 #####################
 #### Bike Nodes #####
 #####################
 
-*.Bikenode[*].appl.Slotted1Enabled = true
-*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bikenode[*].appl.Slotted_R = 300 #40
-*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
+#~ *.Bikenode[*].appl.Slotted1Enabled = true
+#~ *.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
+#~ *.Bikenode[*].appl.Slotted_R = 300 #40
+#~ *.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
 
-*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
+#~ *.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
 
-*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bikenode[*].appl.aware = false 
+#~ *.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
+#~ *.Bikenode[*].appl.aware = false 
 
-*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+#~ *.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.Bikenode[*].appl.Send_Per_WSM = false
-*.Bikenode[*].appl.sendWSA = false 
+#~ *.Bikenode[*].appl.Send_Per_WSM = false
+#~ *.Bikenode[*].appl.sendWSA = false 
 
+#repeat=10
 
-
-sim-time-limit = 30020s #${19010s, 22010s, 29010s, 30010s !DEN} #28000s #${20605s,22336s,22119s,23922s !DEN}
-
-repeat=10
-
-
+[Config Ped_Crossing-OnStreet-S11]
 ###########################################################
 ## Only VRU OnStreet send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###########################################################
-[Config Ped_Crossing-OnStreet-S10]
 
 **.vector-recording = false
 cmdenv-express-mode = true
