--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -103,46 +103,12 @@ print-undisposed = false
 #                    WaveAppLayer                        #
 ##########################################################
 *.node[*].applType = "ca_system.modules.application.myWaveAppLayer"
-
-#~ *.node[*].appl.headerLength = 80 bit
-#~ *.node[*].appl.sendBeacons = true
-#~ *.node[*].appl.dataOnSch = false
-#~ *.node[*].appl.beaconInterval = 1s
-#~ *.node[*].appl.beaconUserPriority = 5
-#~ *.node[*].appl.dataUserPriority = 7
-#~ *.node[*].appl.beaconLengthBits = 1472 bit
-
 *.Pednode[*].applType = "ca_system.modules.application.PedAppLayer"
-#~ *.Pednode[*].appl.headerLength = 80 bit
-#~ *.Pednode[*].appl.sendBeacons = true
-#~ *.Pednode[*].appl.dataOnSch = false
-#~ *.Pednode[*].appl.beaconInterval = 1s
-#~ *.Pednode[*].appl.beaconUserPriority = 5
-#~ *.Pednode[*].appl.dataUserPriority = 7
-#~ *.Pednode[*].appl.beaconLengthBits = 1472 bit
-
 *.Bicyclenode[*].applType = "ca_system.modules.application.CycleAppLayer"
-
-#~ *.Bicyclenode[*].appl.headerLength = 80 bit
-#~ *.Bicyclenode[*].appl.sendBeacons = true
-#~ *.Bicyclenode[*].appl.dataOnSch = false
-#~ *.Bicyclenode[*].appl.beaconInterval = 1s
-#~ *.Bicyclenode[*].appl.beaconUserPriority = 5
-#~ *.Bicyclenode[*].appl.dataUserPriority = 7
-#~ *.Bicyclenode[*].appl.beaconLengthBits = 1472 bit
-
 *.Bikenode[*].applType = "ca_system.modules.application.CycleAppLayer"
 
-#~ *.Bikenode[*].appl.headerLength = 80 bit
-#~ *.Bikenode[*].appl.sendBeacons = true
-#~ *.Bikenode[*].appl.dataOnSch = false
-#~ *.Bikenode[*].appl.beaconInterval = 1s
-#~ *.Bikenode[*].appl.beaconUserPriority = 5
-#~ *.Bikenode[*].appl.dataUserPriority = 7
-#~ *.Bikenode[*].appl.beaconLengthBits = 1472 bit 
-
 *.**.appl.headerLength = 80 bit
-*.**.appl.sendBeacons = false
+*.**.appl.sendBeacons = true
 *.**.appl.dataOnSch = false
 *.**.appl.beaconInterval = 1s
 *.**.appl.beaconUserPriority = 5
@@ -168,21 +134,6 @@ print-undisposed = false
 *.**.veinsmobility.y = 0
 *.**.veinsmobility.z = 1.895
 
-#~ *.Pednode[*].veinsmobilityType.debug = false
-#~ *.Pednode[*].veinsmobility.x = 0
-#~ *.Pednode[*].veinsmobility.y = 0
-#~ *.Pednode[*].veinsmobility.z = 1.895
-
-#~ *.Bicyclenode[*].veinsmobilityType.debug = false
-#~ *.Bicyclenode[*].veinsmobility.x = 0
-#~ *.Bicyclenode[*].veinsmobility.y = 0
-#~ *.Bicyclenode[*].veinsmobility.z = 1.895
-
-#~ *.Bikenode[*].veinsmobilityType.debug = false
-#~ *.Bikenode[*].veinsmobility.x = 0
-#~ *.Bikenode[*].veinsmobility.y = 0
-#~ *.Bikenode[*].veinsmobility.z = 1.895
-
 
 [Config Ped_Crossing-BL-Obstacle-S11]
 ###################################################
@@ -197,12 +148,11 @@ cmdenv-express-mode = true
 *.**.nic.mac1609_4.useServiceChannel = false
 
 # Set Scenario 
-*.manager.launchConfig = xmldoc("MoST_ped3.launchd.xml")
+*.manager.launchConfig = ${DEN= xmldoc("MoST_ped4.launchd.xml"), xmldoc("MoST_ped3.launchd.xml")}
 
-*.manager.firstStepAt = 290s #130s 
-sim-time-limit = 310s #150s 
-#*.**.appl.beaconAtTime = 320s
-#*.manager.roiRects = "4640,2130-4960,2320" #"4735,2215-4935,2415"
+*.manager.firstStepAt = ${ 130s, 290s !DEN} #130s 
+sim-time-limit = ${ 150s, 310s !DEN} #150s 
+
 
 *.**.appl.Slotted1Enabled = true
 *.**.appl.Slotted_Ns = 3 #${3 ,2} 
@@ -218,23 +168,6 @@ sim-time-limit = 310s #150s
 *.**.appl.Send_Per_WSM = false
 *.**.appl.sendWSA = false 
 
-#########################
-#### Normal Vehicle #####
-#########################
-
-#~ *.node[*].appl.Slotted1Enabled = true
-#~ *.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-#~ *.node[*].appl.Slotted_R = 300 #40
-#~ *.node[*].appl.Slotted_tau = 0.005 #1.45
-
-#~ *.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
-#~ *.node[*].appl.NTL_target = 0 
-#~ *.node[*].appl.aware = false
-
-#~ *.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-#~ *.node[*].appl.Send_Per_WSM = false
-#~ *.node[*].appl.sendWSA = false 
 
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
@@ -242,63 +175,7 @@ sim-time-limit = 310s #150s
 *.node[10].appl.Accident_start = 50000#120 #95
 *.node[10].appl.MeInAcc = false
 
-###########################
-#### Pedestrian Nodes #####
-###########################
-
-#~ *.Pednode[*].appl.Slotted1Enabled = true
-#~ *.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-#~ *.Pednode[*].appl.Slotted_R = 300 #40
-#~ *.Pednode[*].appl.Slotted_tau = 0.005 #1.45
-
-#~ *.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-#~ *.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-#~ *.Pednode[*].appl.aware = false 
-
-#~ *.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-#~ *.Pednode[*].appl.Send_Per_WSM = false
-#~ *.Pednode[*].appl.sendWSA = false 
-
-########################
-#### Bicycle Nodes #####
-########################
-
-#~ *.Bicyclenode[*].appl.Slotted1Enabled = true
-#~ *.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-#~ *.Bicyclenode[*].appl.Slotted_R = 300 #40
-#~ *.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
-
-#~ *.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-#~ *.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-#~ *.Bicyclenode[*].appl.aware = false 
-
-#~ *.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-#~ *.Bicyclenode[*].appl.Send_Per_WSM = false
-#~ *.Bicyclenode[*].appl.sendWSA = false 
-
-#####################
-#### Bike Nodes #####
-#####################
-
-#~ *.Bikenode[*].appl.Slotted1Enabled = true
-#~ *.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-#~ *.Bikenode[*].appl.Slotted_R = 300 #40
-#~ *.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
-
-#~ *.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-#~ *.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-#~ *.Bikenode[*].appl.aware = false 
-
-#~ *.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-#~ *.Bikenode[*].appl.Send_Per_WSM = false
-#~ *.Bikenode[*].appl.sendWSA = false 
-
-#repeat=10
+repeat=10
 
 [Config Ped_Crossing-OnStreet-S11]
 ###########################################################
