--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -187,31 +187,29 @@ cmdenv-express-mode = true
 
 # Service Channel
 
-*.**.nic.mac1609_4.useServiceChannel = true
+*.**.nic.mac1609_4.useServiceChannel = false
 
 # Set Scenario 
+*.manager.launchConfig = ${DEN= xmldoc("MoST_ped4.launchd.xml"), xmldoc("MoST_ped3.launchd.xml")}
 
-*.manager.firstStepAt = 30000s #${DEN=20599s,22330s,22113s,23916s}
-*.manager.roiRects = "4735,2215-4935,2415"
+*.manager.firstStepAt = ${ 130s, 290s !DEN} #130s 
+sim-time-limit = ${ 150s, 310s !DEN} #150s 
 
-#########################
-#### Normal Vehicle #####
-#########################
 
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
+*.**.appl.Slotted1Enabled = true
+*.**.appl.Slotted_Ns = 3 #${3 ,2} 
+*.**.appl.Slotted_R = 300 #40
+*.**.appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.NTL_target = 0 
+*.**.appl.aware = false
 
-*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
-*.node[*].appl.aware = false
+*.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+*.**.appl.Send_Per_WSM = false
+*.**.appl.sendWSA = false 
 
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false 
 
 *.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
@@ -219,289 +217,100 @@ cmdenv-express-mode = true
 *.node[10].appl.Accident_start = 50000#120 #95
 *.node[10].appl.MeInAcc = false
 
-###########################
-#### Pedestrian Nodes #####
-###########################
-
-*.Pednode[*].appl.Slotted1Enabled = true
-*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Pednode[*].appl.Slotted_R = 300 #40
-*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Pednode[*].appl.aware = false 
-
-*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = false 
-
 *.Pednode[*].appl.OnStreet = true
-
-########################
-#### Bicycle Nodes #####
-########################
-
-*.Bicyclenode[*].appl.Slotted1Enabled = true
-*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bicyclenode[*].appl.Slotted_R = 300 #40
-*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bicyclenode[*].appl.aware = false 
-
-*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false 
-
 *.Bicyclenode[*].appl.OnStreet = true
-
-#####################
-#### Bike Nodes #####
-#####################
-
-*.Bikenode[*].appl.Slotted1Enabled = true
-*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bikenode[*].appl.Slotted_R = 300 #40
-*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bikenode[*].appl.aware = false 
-
-*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bikenode[*].appl.Send_Per_WSM = false
-*.Bikenode[*].appl.sendWSA = false 
-
 *.Bikenode[*].appl.OnStreet = true
 
-
-sim-time-limit = 30020s #${20602s,22333s,22116s,23919s !DEN}
-
-repeat=10
+repeat=5
 
 
+[Config Ped_Crossing-MovinPed-S11]
 ###############################################################
 ## Only VRU whit Speed>0 send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###############################################################
-[Config Ped_Crossing-MovinPed-S10]
-
-#**.vector-recording = true
-#**.debug = true
-#**.coreDebug = 
-
-cmdenv-express-mode = true
-
-# Service Channel
-
-*.**.nic.mac1609_4.useServiceChannel = true
-
-# Set Scenario 
-
-*.manager.firstStepAt = 30000s # ${DEN=20599s,22330s,22113s,23916s}
-*.manager.roiRects = "4735,2215-4935,2415"
-
-#########################
-#### Normal Vehicle #####
-#########################
-
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
-
-*.node[*].appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
-*.node[*].appl.aware = false
-
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false 
-
-*.node[*].veinsmobility.accidentCount = 0 #0 #1
-*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
-*.node[10].veinsmobility.accidentDuration = 5s
-*.node[10].appl.Accident_start = 50000 #120 #95
-*.node[10].appl.MeInAcc = false
-
-###########################
-#### Pedestrian Nodes #####
-###########################
-
-*.Pednode[*].appl.Slotted1Enabled = true
-*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Pednode[*].appl.Slotted_R = 300 #40
-*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Pednode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Pednode[*].appl.aware = false 
-
-*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = false 
-
-*.Pednode[*].appl.MovinPed = true
-
-########################
-#### Bicycle Nodes #####
-########################
-
-*.Bicyclenode[*].appl.Slotted1Enabled = true
-*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bicyclenode[*].appl.Slotted_R = 300 #40
-*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bicyclenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-*.Bicyclenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bicyclenode[*].appl.aware = false 
-
-*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false 
-
-*.Bicyclenode[*].appl.MovinPed = true
-
-#####################
-#### Bike Nodes #####
-#####################
-
-*.Bikenode[*].appl.Slotted1Enabled = true
-*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bikenode[*].appl.Slotted_R = 300 #40
-*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bikenode[*].appl.beaconInterval = ${1s,0.5s,0.2s,0.1s !BL} # 1Hz, 2Hz, 5Hz, 10Hz
-
-*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bikenode[*].appl.aware = false 
-
-*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bikenode[*].appl.Send_Per_WSM = false
-*.Bikenode[*].appl.sendWSA = false 
-
-*.Bikenode[*].appl.MovinPed = true
-
-
-sim-time-limit = 30020s #${20602s,22333s,22116s,23919s !DEN}
-repeat=10
-
-########################################################
-## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
-########################################################
-
-[Config Ped_Crossing-MultipleTx-S10]
 
 **.vector-recording = false
 cmdenv-express-mode = true
 
 # Service Channel
 
-*.**.nic.mac1609_4.useServiceChannel = true
+*.**.nic.mac1609_4.useServiceChannel = false
 
 # Set Scenario 
+*.manager.launchConfig = ${DEN= xmldoc("MoST_ped4.launchd.xml"), xmldoc("MoST_ped3.launchd.xml")}
 
-*.manager.firstStepAt =  30000s #${DEN=20599s,22330s,22113s,23916s}
-*.manager.roiRects = "4735,2215-4935,2415"
+*.manager.firstStepAt = ${ 130s, 290s !DEN} #130s 
+sim-time-limit = ${ 150s, 310s !DEN} #150s 
 
-#########################
-#### Normal Vehicle #####
-#########################
 
-*.node[*].appl.Slotted1Enabled = true
-*.node[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.node[*].appl.Slotted_R = 300 #40
-*.node[*].appl.Slotted_tau = 0.005 #1.45
+*.**.appl.Slotted1Enabled = true
+*.**.appl.Slotted_Ns = 3 #${3 ,2} 
+*.**.appl.Slotted_R = 300 #40
+*.**.appl.Slotted_tau = 0.005 #1.45
 
-*.node[*].appl.beaconInterval = 1s 
+*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.NTL_target = 0 
+*.**.appl.aware = false
 
-*.node[*].appl.NTL_target =0# ${NTL=0}#,1,2}
-*.node[*].appl.aware = false
+*.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
 
-*.node[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+*.**.appl.Send_Per_WSM = false
+*.**.appl.sendWSA = false 
 
-*.node[*].appl.Send_Per_WSM = false
-*.node[*].appl.sendWSA = false 
 
-*.node[*].veinsmobility.accidentCount = 0 
+*.node[*].veinsmobility.accidentCount = 0 #0 #1
 *.node[10].veinsmobility.accidentStart =  50000s#120s #95s
 *.node[10].veinsmobility.accidentDuration = 5s
 *.node[10].appl.Accident_start = 50000#120 #95
 *.node[10].appl.MeInAcc = false
 
-###########################
-#### Pedestrian Nodes #####
-###########################
+*.Pednode[*].appl.MovinPed = true
+*.Bicyclenode[*].appl.MovinPed = true
+*.Bikenode[*].appl.MovinPed = true
 
-*.Pednode[*].appl.Slotted1Enabled = true
-*.Pednode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Pednode[*].appl.Slotted_R = 300 #40
-*.Pednode[*].appl.Slotted_tau = 0.005 #1.45
+repeat=5
 
-*.Pednode[*].appl.beaconInterval = 1s #${1s,0.5s,0.1s !BL}
+[Config Ped_Crossing-MultipleTx-S11]
+########################################################
+## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
+########################################################
 
-*.Pednode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Pednode[*].appl.aware = false 
+**.vector-recording = false
+cmdenv-express-mode = true
 
-*.Pednode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
+# Service Channel
 
-*.Pednode[*].appl.Send_Per_WSM = false
-*.Pednode[*].appl.sendWSA = false 
+*.**.nic.mac1609_4.useServiceChannel = false
+
+# Set Scenario 
+*.manager.launchConfig = ${DEN= xmldoc("MoST_ped4.launchd.xml"), xmldoc("MoST_ped3.launchd.xml")}
+
+*.manager.firstStepAt = ${ 130s, 290s !DEN} #130s 
+sim-time-limit = ${ 150s, 310s !DEN} #150s 
+
+
+*.**.appl.Slotted1Enabled = true
+*.**.appl.Slotted_Ns = 3 #${3 ,2} 
+*.**.appl.Slotted_R = 300 #40
+*.**.appl.Slotted_tau = 0.005 #1.45
+
+*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.NTL_target = 0 
+*.**.appl.aware = false
+
+*.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.**.appl.Send_Per_WSM = false
+*.**.appl.sendWSA = false 
+
+*.node[*].veinsmobility.accidentCount = 0 #0 #1
+*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.MeInAcc = false
 
 *.Pednode[*].appl.MultipleTx = true
-
-########################
-#### Bicycle Nodes #####
-########################
-
-*.Bicyclenode[*].appl.Slotted1Enabled = true
-*.Bicyclenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bicyclenode[*].appl.Slotted_R = 300 #40
-*.Bicyclenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bicyclenode[*].appl.beaconInterval = 1s 
-*.Bicyclenode[*].appl.NTL_target = 0 
-*.Bicyclenode[*].appl.aware = false 
-
-*.Bicyclenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bicyclenode[*].appl.Send_Per_WSM = false
-*.Bicyclenode[*].appl.sendWSA = false 
 *.Bicyclenode[*].appl.MultipleTx = true
-
-#####################
-#### Bike Nodes #####
-#####################
-
-*.Bikenode[*].appl.Slotted1Enabled = true
-*.Bikenode[*].appl.Slotted_Ns = 3 #${3 ,2} 
-*.Bikenode[*].appl.Slotted_R = 300 #40
-*.Bikenode[*].appl.Slotted_tau = 0.005 #1.45
-
-*.Bikenode[*].appl.beaconInterval = 1s #${1s,0.5s,0.1s !BL} #0.1s#${0.1s,0.5s}
-
-*.Bikenode[*].appl.NTL_target = 0 #${0,1,2 !NTL}
-*.Bikenode[*].appl.aware = false 
-
-*.Bikenode[*].appl.dataOnSch = false  # Setear en false para realizar diseminación
-
-*.Bikenode[*].appl.Send_Per_WSM = false
-*.Bikenode[*].appl.sendWSA = false 
 *.Bikenode[*].appl.MultipleTx = true
 
-
-sim-time-limit = 30020s #${20602s,22333s,22116s,23919s !DEN}
-
-repeat=10
+repeat=5
