Actualizando extracción de métricas S11

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -36,7 +36,7 @@ print-undisposed = false
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -135,10 +135,13 @@ print-undisposed = false
 *.**.veinsmobility.z = 1.895
 
 
-[Config Ped_Crossing-BL-Obstacle-S11]
+[Config Ped_Crossing-BL-NoObstacle-S11]
 ###################################################
 ## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
 ###################################################
+*.**.nic.phy80211p.decider = xmldoc("config2.xml")
+*.**.nic.phy80211p.analogueModels = xmldoc("config2.xml")
+
 
 **.vector-recording = false
 cmdenv-express-mode = true
@@ -175,7 +178,7 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 *.node[10].appl.Accident_start = 50000#120 #95
 *.node[10].appl.MeInAcc = false
 
-repeat=10
+repeat=5
 
 [Config Ped_Crossing-OnStreet-S11]
 ###########################################################
@@ -294,7 +297,7 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 *.**.appl.Slotted_R = 300 #40
 *.**.appl.Slotted_tau = 0.005 #1.45
 
-*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.beaconInterval = 1s  # ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
 *.**.appl.NTL_target = 0 
 *.**.appl.aware = false
 
