no obstacle config

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -36,7 +36,7 @@ print-undisposed = false
 # Obstacle parameters                                    #
 ##########################################################
 *.obstacles.debug = false
-#*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
+*.obstacles.obstacles = xmldoc("config.xml", "//AnalogueModel[@type='SimpleObstacleShadowing']/obstacles")
 
 ##########################################################
 #            TraCIScenarioManager parameters             #
@@ -179,6 +179,53 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 *.node[10].appl.MeInAcc = false
 
 repeat=5
+
+
+[Config Ped_Crossing-BL-Obstacle-S11]
+###################################################
+## All nodes send beacons with r=1Hz,2Hz,5Hz,10Hz #
+###################################################
+#*.**.nic.phy80211p.decider = xmldoc("config2.xml")
+#*.**.nic.phy80211p.analogueModels = xmldoc("config2.xml")
+
+
+**.vector-recording = false
+cmdenv-express-mode = true
+
+# Service Channel
+
+*.**.nic.mac1609_4.useServiceChannel = false
+
+# Set Scenario 
+*.manager.launchConfig = ${DEN= xmldoc("MoST_ped4.launchd.xml"), xmldoc("MoST_ped3.launchd.xml")}
+
+*.manager.firstStepAt = ${ 130s, 290s !DEN} #130s 
+sim-time-limit = ${ 150s, 310s !DEN} #150s 
+
+
+*.**.appl.Slotted1Enabled = true
+*.**.appl.Slotted_Ns = 3 #${3 ,2} 
+*.**.appl.Slotted_R = 300 #40
+*.**.appl.Slotted_tau = 0.005 #1.45
+
+*.**.appl.beaconInterval = ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.NTL_target = 0 
+*.**.appl.aware = false
+
+*.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
+
+*.**.appl.Send_Per_WSM = false
+*.**.appl.sendWSA = false 
+
+
+*.node[*].veinsmobility.accidentCount = 0 #0 #1
+*.node[10].veinsmobility.accidentStart =  50000s#120s #95s
+*.node[10].veinsmobility.accidentDuration = 5s
+*.node[10].appl.Accident_start = 50000#120 #95
+*.node[10].appl.MeInAcc = false
+
+repeat=5
+
 
 [Config Ped_Crossing-OnStreet-S11]
 ###########################################################
