subiendo resultados MTX 10Hz

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -320,7 +320,7 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 
 repeat=5
 
-[Config Ped_Crossing-MultipleTx-S11]
+[Config Ped_Crossing-MultipleTx-S11-10Hz]
 ########################################################
 ## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
 ########################################################
@@ -347,6 +347,9 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 *.**.appl.beaconInterval = 1s  # ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
 *.**.appl.NTL_target = 0 
 *.**.appl.aware = false
+
+
+*.node[*].appl.beaconInterval = 0.1s
 
 *.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
 
