creación nuevo escenario para multiTx

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -320,9 +320,9 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 
 repeat=5
 
-[Config Ped_Crossing-MultipleTx-S11-10Hz]
+[Config Ped_Crossing-MultipleTx-S11-1Hz-V2]
 ########################################################
-## VRU whit Speed>0 send beacons with r=5Hz else r=2Hz #
+## VRU with Speed>0 send beacons with r=5Hz else r=2Hz #
 ########################################################
 
 **.vector-recording = false
@@ -344,12 +344,12 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 *.**.appl.Slotted_R = 300 #40
 *.**.appl.Slotted_tau = 0.005 #1.45
 
-*.**.appl.beaconInterval = 1s  # ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
+*.**.appl.beaconInterval = 1s #0.1  # ${BL= 1s,0.5s,0.2s,0.1s } # 1Hz, 2Hz, 5Hz, 10Hz
 *.**.appl.NTL_target = 0 
 *.**.appl.aware = false
 
 
-*.node[*].appl.beaconInterval = 0.1s
+#*.node[*].appl.beaconInterval = 1s #0.1s
 
 *.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
 
