Actualizando variable para transmisión Multi TX

--- a/src/networks/MoST_Scenario/omnetpp2.ini
+++ b/src/networks/MoST_Scenario/omnetpp2.ini
@@ -349,6 +349,10 @@ sim-time-limit = ${ 150s, 310s !DEN} #150s
 *.**.appl.aware = false
 
 
+*.**.appl.MTX_r1 = ${rtx= 0.2s,0.1s,0.1s,0.5s} 
+*.**.appl.MTX_r2 = ${1s,1s,0.5s,1s !rtx}
+ 
+
 #*.node[*].appl.beaconInterval = 1s #0.1s
 
 *.**.appl.dataOnSch = false  # Setear en false para realizar diseminación
